# baldr-router

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  FEATURE_FREEZE.md  Makefile  README.md  SECURITY.md  codex_configuration.md  package-lock.json  package.json  pyproject.toml
.github/: dependabot.yml
contracts/: agent-catalog-sync-v1.schema.json  agent-execution-v1.schema.json  agent-manager-v1.schema.json  agent-registry-v1.schema.json  agent-source-v1.schema.json  agent-team-resolution-v1.schema.json  agent-transport-http-v1.schema.json  builder-driver-registration-v1.schema.json  builder-driver-v1.schema.json  builder-protocol-v1.schema.json  facade-v1.json  facade-v1.schema.json  orchestration-policy-v1.schema.json  phase-deliverable-index-page-v1.schema.json  phase-deliverable-page-v1.schema.json  phase-deliverable-v1.schema.json  work-item-progress-v1.schema.json
docs/: agent-manager-operations.md  agentes-externos-necesitan-fronteras.md  architecture.md  baldr-console.md  builder-protocol.md  clean-machine-install.md  codex.md  consistency-operator-control.md  durable-orchestration.md  external-agent-http.md  external-agent-registry.md  external-agent-runtime.md  golden-path.md  kiro.md  migration-0.20.md  multi-agent-workflows.md  narrative-progress.md  product-readiness.md  real-environment-qualification.md  release-candidate-hardening.md  release-packaging.md  validation-lab-workspace-probe.md  vscode.md  windows-wsl.md
e2e/: README.md  REAL_ENVIRONMENT_MATRIX.md  kiro-power.md  vscode-remote-wsl.md  vscode-windows-wsl.md
examples/: agents.local.json  codex-config.context7.toml
facades/: README.md
facades/kiro/adapter/: README.md  pyproject.toml
facades/kiro/adapter/src/baldr_kiro_adapter/: cli.py  extension.py  hooks.py
facades/kiro/adapter/tests/: test_e2e_onboarding.py  test_extension.py  test_hooks.py
lab/: README.md  matrix.json
launcher/: README.md  package.json
qualification/: README.md
router/: README.md  pyproject.toml
router/src/baldr_router/: agent_api.py  agent_diagnostics.py  agent_execution.py  agent_gateway.py  agent_http.py  agent_manager.py  agent_manager_policy.py  agent_manager_service.py  agent_registry.py  agent_sources.py  agent_sync.py  cli.py  codex.py  codex_app_server.py  codex_config.py  codex_exec_json.py  codex_sdk.py  config.py  context7.py  context7_setup.py  execution_profiles.py  extensions.py  facade.py  facade_contract.py  facade_runtime.py  kiro_cli.py  phase_deliverables.py  platforming.py  process_control.py  provider_activity.py  provider_api.py  provider_errors.py  provider_registry.py  redaction.py  release_policy.py  run.py  runtime_guard.py  schemas.py  secrets.py  server.py  (+8 more)
router/src/baldr_router/contracts/: __init__.py  agent-catalog-sync-v1.schema.json  agent-execution-v1.schema.json  agent-manager-v1.schema.json  agent-registry-v1.schema.json  agent-source-v1.schema.json  agent-team-resolution-v1.schema.json  agent-transport-http-v1.schema.json  facade-v1.json  facade-v1.schema.json  orchestration-policy-v1.schema.json  phase-deliverable-index-page-v1.schema.json  phase-deliverable-page-v1.schema.json  phase-deliverable-v1.schema.json  work-item-progress-v1.schema.json
router/src/baldr_router/discovery/: __init__.py  environment_probe.py  exclusions.py  fingerprint.py  workspace_profile.py
router/src/baldr_router/durability/: __init__.py  engine.py  evidence.py  git_workspace.py  heartbeat.py  identity.py  migrations.py  recovery.py  reducers.py  shadow_workspace.py  state.py  store.py
router/src/baldr_router/evidence/: __init__.py  bundle.py
router/src/baldr_router/lab/: __init__.py  matrix.py
router/src/baldr_router/qualification/: __init__.py  canaries-v1.json  definitions.py  extension_host.py  profiles-v1.json  receipts.py  runner.py
router/src/baldr_router/validation/: __init__.py  durability_contract.py  fixture_worker.py  lifecycle.py  mcp_smoke.py
router/tests/: test_agent_diagnostics.py  test_agent_execution.py  test_agent_gateway.py  test_agent_manager.py  test_agent_registry_admin.py  test_agent_sources.py  test_agent_sync.py  test_artifact_privacy.py  test_codex_config.py  test_codex_errors.py  test_codex_models.py  test_codex_runner_normalization.py  test_consistency_operator_control.py  test_context7_detection.py  test_context7_onboarding.py  test_dev_runner.py  test_discovery_probe.py  test_durable_evidence.py  test_durable_recovery.py  test_durable_sessions_and_crash_restart.py  test_durable_store.py  test_evidence_bundle.py  test_execution_profiles_durable.py  test_extension_host_qualification.py  test_extensions.py  test_external_agent_platform_e2e.py  test_external_agent_runner_e2e.py  test_facade.py  test_facade_conformance.py  test_facade_workbench_status.py  test_frozen_surface.py  test_git_worktree_checkpoints.py  test_kiro_cli.py  test_lab_matrix.py  test_lifecycle_verification.py  test_mcp_smoke.py  test_parallel_orchestration.py  test_phase_deliverables.py  test_platforming.py  test_process_control.py  (+22 more)
runtimes/agent-runner/: README.md  pyproject.toml
runtimes/agent-runner/src/baldr_agent_runner/: __init__.py  cli.py  runner.py  store.py
runtimes/agent-runner/tests/: test_runner.py
scripts/: build_release.py  check_release_consistency.py  dev.py  (+7 more)
sdks/python/: README.md  pyproject.toml
sdks/python/src/baldr_agent_sdk/: __init__.py  agent.py  contract.py
sdks/python/tests/: test_sdk.py
tooling/agent-builder/: README.md  pyproject.toml
tooling/agent-builder/src/baldr_agent_builder/: backend.py  build.py  cli.py  client.py  config.py  conformance.py  diagnostics.py  driver.py  drivers.py  execution.py  inventory.py  models.py  protocol.py  release.py  scaffold.py
tooling/agent-builder/src/baldr_agent_builder/templates/: Makefile.tpl  README.md.tpl  README.typescript.md.tpl  agent.py.tpl  agent.ts.tpl  baldr-agent.toml.tpl  baldr-agent.typescript.toml.tpl  package.json.tpl  test_agent.mjs.tpl  test_agent.py.tpl
tooling/agent-builder/tests/: test_boundaries.py  test_conformance.py  test_execution.py  test_lifecycle.py  test_protocol.py
(+95 files in other folders)
