[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "baldr-router"
version = "0.20.0"
description = "Client-agnostic MCP orchestration runtime with a frozen setup/status/run facade contract, provider adapters, roles, workflows, Context7 cache, telemetry, and structured reports."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "Baldr" }]
dependencies = [
  "mcp>=1.10.0"
]

[project.scripts]
baldr-router = "baldr_router.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/baldr_router"]

[tool.hatch.build.targets.wheel.force-include]
"src/baldr_router/contracts/facade-v1.json" = "baldr_router/contracts/facade-v1.json"
"src/baldr_router/contracts/facade-v1.schema.json" = "baldr_router/contracts/facade-v1.schema.json"
"src/baldr_router/contracts/work-item-progress-v1.schema.json" = "baldr_router/contracts/work-item-progress-v1.schema.json"
"src/baldr_router/contracts/phase-deliverable-v1.schema.json" = "baldr_router/contracts/phase-deliverable-v1.schema.json"
"src/baldr_router/contracts/phase-deliverable-page-v1.schema.json" = "baldr_router/contracts/phase-deliverable-page-v1.schema.json"
"src/baldr_router/contracts/phase-deliverable-index-page-v1.schema.json" = "baldr_router/contracts/phase-deliverable-index-page-v1.schema.json"
"src/baldr_router/contracts/agent-registry-v1.schema.json" = "baldr_router/contracts/agent-registry-v1.schema.json"
"src/baldr_router/contracts/agent-transport-http-v1.schema.json" = "baldr_router/contracts/agent-transport-http-v1.schema.json"
"src/baldr_router/contracts/agent-manager-v1.schema.json" = "baldr_router/contracts/agent-manager-v1.schema.json"
"src/baldr_router/contracts/agent-source-v1.schema.json" = "baldr_router/contracts/agent-source-v1.schema.json"
"src/baldr_router/contracts/agent-catalog-sync-v1.schema.json" = "baldr_router/contracts/agent-catalog-sync-v1.schema.json"
"src/baldr_router/contracts/agent-team-resolution-v1.schema.json" = "baldr_router/contracts/agent-team-resolution-v1.schema.json"
"src/baldr_router/contracts/orchestration-policy-v1.schema.json" = "baldr_router/contracts/orchestration-policy-v1.schema.json"
"src/baldr_router/contracts/agent-execution-v1.schema.json" = "baldr_router/contracts/agent-execution-v1.schema.json"
"src/baldr_router/qualification/profiles-v1.json" = "baldr_router/qualification/profiles-v1.json"
"src/baldr_router/qualification/canaries-v1.json" = "baldr_router/qualification/canaries-v1.json"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[project.optional-dependencies]
codex-sdk = ["openai-codex"]
dev = [
  "baldr-agent-runner>=0.20.0,<0.21.0",
  "baldr-agent-sdk>=0.20.0,<0.21.0",
  "pytest>=8.0",
  "ruff>=0.9",
]

[tool.uv.sources]
baldr-agent-runner = { workspace = true }
baldr-agent-sdk = { workspace = true }
