[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "baldr-agent-sdk"
version = "0.19.0"
description = "Public Python SDK for externally owned Baldr agents."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "Baldr" }]
dependencies = []

[tool.hatch.build.targets.wheel]
packages = ["src/baldr_agent_sdk"]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.9"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
