[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "baldr-kiro-adapter"
version = "0.19.0"
description = "Optional Kiro client adapter for the client-agnostic baldr-router MCP runtime."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "Baldr" }]
dependencies = [
  "baldr-router>=0.19.0,<0.20.0",
  "mcp>=1.10.0"
]

[project.scripts]
baldr-kiro-adapter = "baldr_kiro_adapter.cli:main"

[project.entry-points."baldr_router.extensions"]
kiro = "baldr_kiro_adapter.extension:register"

[tool.hatch.build.targets.wheel]
packages = ["src/baldr_kiro_adapter"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "../../../router/src"]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.9"]

[tool.uv.sources]
baldr-router = { workspace = true }
